Add the first main section of the project
Added the first div of the landing page,styled as per the design

--- a/index.html
+++ b/index.html
@@ -9,42 +9,47 @@
 <body>
     <div class="header">
         <div class="header-links">
-            <h4>Header logo</h4>
+                <h4>Header logo</h4>
 
-            <ul>
-                <li>header link one</li>
-                <li>header link two</li>
-                <li>header link three</li>
-            </ul>
+                <ul>
+                    <li><a href="#">header link one</a></li>
+                    <li><a href="#">header link two</a></li>
+                    <li><a href="#">header link three</a></li>
+                </ul>
+
         </div>
+
         <div class="header-content">
-            <div><h4>This website is awesome</h4>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque nihil incidunt delectus aliquam temporibus. </p>
-            <button>Sig nup</button></div>
-            <img src="./images/beach-picture.jpg" alt="picture of the beach" width="300px" height="auto">
+            <div>
+                <h4>This website is awesome</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque nihil incidunt delectus aliquam temporibus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil totam, deleniti, cum fugiat pariatur minima libero eum nulla fuga dolore in. Cumque animi optio officia, tempore repudiandae beatae saepe dolorem! </p>
+                <button>Sign up</button>
+            </div>
+            <img src="./images/beach-picture.jpg" alt="picture of the beach" width="400px" height="auto">
         </div>
     </div>
+
     <div class="content-one">
         <h3>Some random information</h3>
-        <div>
-            <div class="tex-box"></div>
-            <div class="tex-box"></div>
-            <div class="tex-box"></div>
-            <div class="tex-box"></div>
+        <div class="inner-content-one">
+            <div class="tex-box">hello</div>
+            <div class="tex-box">hello</div>
+            <div class="tex-box">hello</div>
+            <div class="tex-box">hello</div>
         </div>
     </div>
+
     <div class="content-two">
         <blockquote>
-            <p></p>
+            Life is like riding a bicycle. To keep your balance, you must keep moving.
+            <p>Albert Einstein</p>
         </blockquote>
-        <p></p>
     </div>
+
     <div class="content-three">
-        <div class="content-box">
-            <div></div>
+            <div>Call to action</div>
             <button>Sign Up</button>
-        </div>
     </div>
-    <div class="footer">Copyright @ The Odin Project 2025</div>
+    <footer class="footer">Copyright @ The Odin Project 2025</footer>
 </body>
 </html>
