Add second section of the index files
Added the section div of the page landing project,as per design

--- a/index.html
+++ b/index.html
@@ -30,12 +30,24 @@
     </div>
 
     <div class="content-one">
-        <h3>Some random information</h3>
+        <h3 class="header-text">Some random information</h3>
         <div class="inner-content-one">
-            <div class="tex-box">hello</div>
-            <div class="tex-box">hello</div>
-            <div class="tex-box">hello</div>
-            <div class="tex-box">hello</div>
+            <div class="images">
+                <img src="./images/shore1.jpg" alt="picture of the first shore" width="200px" height="auto">
+                <div class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere repellendus asperiores pariatur nihil fugiat repudiandae dolores sequi nobis, unde, accusamus deleniti ipsum possimus magni laboriosam maxime similique id fuga perferendis.</div>
+            </div>
+            <div class="images">
+                <img src="./images/shore2.jpg" alt="picture of the secodn shore" width="200px" height="150px">
+                <div class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero iure accusamus, perferendis error ut modi, sunt enim dignissimos dolorem qui corrupti, mollitia in distinctio sed est minus et voluptates nulla.</div>
+            </div>
+            <div class="images">
+                <img src="./images/shore3.jpg" alt="picture of the third shore" width="200px" height="auto">
+                <div class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas culpa, perferendis quibusdam dolorem consequatur velit excepturi reiciendis amet. Voluptatem nemo odio numquam asperiores quis accusamus, quae consequatur harum ex molestiae.</div>
+            </div>
+            <div class="images">
+                <img src="./images/shore4.jpg" alt="picture of the fourth shore" width="200px" height="auto">
+                <div class="text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sunt fugit sequi reiciendis harum esse vitae vero perferendis qui! Facere quidem corrupti dolores ipsam, asperiores possimus adipisci tenetur eveniet aliquid! Est?</div>
+            </div>
         </div>
     </div>
 
