--- a/index.html
+++ b/index.html
@@ -53,15 +53,22 @@
 
     <div class="content-two">
         <blockquote>
-            Life is like riding a bicycle. To keep your balance, you must keep moving.
-            <p>Albert Einstein</p>
+            "Just don't give up trying to do what you really want to do. 
+            Where there is love and inspiration, I don't think you can go wrong."
+            <p>-Ella Fitzgerald</p>
         </blockquote>
     </div>
 
     <div class="content-three">
-            <div>Call to action</div>
+        <div class="inner-content-three">
+            <div>
+                <h4>Call to action! It's time!</h4>
+                <p>Sign up for our product by clicking the button right over there!</p>
+            </div>
             <button>Sign Up</button>
+        </div>
     </div>
-    <footer class="footer">Copyright @ The Odin Project 2025</footer>
+
+    <footer class="footer">Copyright @Just-AgA's project 2025</footer>
 </body>
 </html>
